--- a/freefilesync/freefilesync.nuspec
+++ b/freefilesync/freefilesync.nuspec
@@ -5,16 +5,30 @@
     <title>FreeFileSync</title>
     <version>8.1</version>
     <authors>zenju</authors>
-    <owners>Yoshimov, LukeAsh</owners>
+    <owners>LukeAsh</owners>
     <summary>FreeFileSync is a folder comparison and synchronization tool providing highly optimized performance and usability without a needlessly complex user interface.</summary>
     <description>FreeFileSync is a free Open Source software that helps you synchronize files and folders for Windows, Linux and Mac OS X. It is designed to save your time by setting up and running backup jobs while having nice visual feedback along the way.</description>
     <projectUrl>http://www.freefilesync.org/</projectUrl>
-    <tags>freefilesync sync</tags>
+    <packageSourceUrl>https://github.com/LukeAsh/choco-packages</packageSourceUrl>
+    <mailingListUrl>http://www.freefilesync.org/forum/</mailingListUrl>
+    <tags>freefilesync sync admin</tags>
     <copyright></copyright>
     <licenseUrl>https://opensource.org/licenses/gpl-3.0.html</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <iconUrl>http://cdn.rawgit.com/LukeAsh/choco-packages/master/icons/freefilesync.png</iconUrl>
-    <releaseNotes></releaseNotes>
+    <releaseNotes>- Follow shell links during drag and drop on main dialog (Windows)
+- Significantly improved main grid rendering performance
+- Log info about non-default global settings
+- Establish new network connections only when needed (Windows)
+- Show only a single login dialog per network share
+- Show login dialogs for the same network address one after another
+- Fixed endless recursion for paths containing certain unicode characters (OS X)
+- Support using portable version without direct installation
+- Fixed access denied error when verifying read-only target file (Windows)
+- New global option for sound cue after comparison
+- Updated help file
+</releaseNotes>
+
   </metadata>
   <files>
     <file src="tools\**" target="tools" />
